--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -124,6 +124,9 @@
         border-radius: 50%;
         background: #007bff;
     }
+    .activity-break {
+        background-color: #e6f7ff;
+    }
 </style>
 {% endblock %}
 
