feat: stats implementation

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -18,7 +18,9 @@
                                     <h5 class="card-title">Current Activity</h5>
                                     <p id="current-activity-name" class="card-text"></p>
                                     <p id="current-activity-time" class="card-text"></p>
-                                    <button id="skip-activity" class="btn btn-warning">Skip to Next Activity</button>
+                                    <button id="move-to-next-activity" class="btn btn-primary">Move to Next Activity</button>
+                                    <button id="close-day" class="btn btn-secondary" style="display: none;">Close Day</button>
+                                    <button id="undo-move" class="btn btn-warning mt-2">Undo</button>
                                 </div>
                             </div>
                         </div>
