--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -23,8 +23,8 @@
         <div class="col-md-6">
             <div class="card mb-4">
                 <div class="card-body">
-                    <h5 class="card-title">Average Session Duration</h5>
-                    <p class="card-text display-4">{{ stats.average_session_duration }}</p>
+                    <h5 class="card-title">Average Activity Duration</h5>
+                    <p class="card-text display-4">{{ stats.average_activity_duration }}</p>
                 </div>
             </div>
         </div>
