--- a/templates/base.html
+++ b/templates/base.html
@@ -11,27 +11,27 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">OnTrak</a>
+            <a class="navbar-brand" href="{{ url_for('dashboard') }}">OnTrak</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Dashboard</a>
+                        <a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/setup">Setup</a>
+                        <a class="nav-link" href="{{ url_for('setup') }}">Setup</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/statistics">Statistics</a>
+                        <a class="nav-link" href="{{ url_for('statistics') }}">Statistics</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <div class="container-fluid mt-5">
+    <div class="container-fluid mt-5 pt-3">
         {% block content %}{% endblock %}
     </div>
     
